--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "devDependencies": {
     "babel-preset-react-native-stage-0": "^1.0.1",
-    "jest-expo": "23.0.0",
-    "jest-junit": "3.3.0",
-    "react-test-renderer": "16.0.0"
+    "jest-expo": "^32.0.0",
+    "jest-junit": "^6.4.0",
+    "react-test-renderer": "^16.8.6"
   },
   "scripts": {
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "test": "node node_modules/jest/bin/jest.js"
+    "test": "jest"
   },
   "jest": {
     "preset": "jest-expo",
