--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,8 @@ android:
   stage: apps
   image: jruby:9.2-jdk
   before_script:
+    - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
+    - sudo apt-get install -y nodejs
     - apt-get --quiet update --yes
     - apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1
     - wget --quiet --output-document=android-sdk.zip https://dl.google.com/android/repository/sdk-tools-linux-${ANDROID_SDK_TOOLS}.zip
@@ -32,7 +34,7 @@ android:
     # temporarily disable checking for EPIPE error and use yes to accept all licenses
     - set +o pipefail
     - yes | android-sdk-linux/tools/bin/sdkmanager --licenses
-    - set -o pipefail
+    - set -o pipefail    
   script:
     - cd android
     - bundle install
