--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,8 @@ build:
 android:
   stage: apps
   image: openjdk:8-jdk
+  tags:
+    - android
   before_script:    
     - apt-get --quiet update --yes
     - apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1 build-essential ruby ruby-dev
@@ -45,46 +47,11 @@ android:
 
 ios:
   stage: apps
+  tags:
+    - ios
   script:
     - echo "running ios"
 
 stages:
   - build
   - apps
-
-# .job_template: &job_deploy
-#   stage: deploy
-#   before_script:
-#     - npm install
-#   # tags:
-#   #   - rnbuild
-#   after_script:
-#     - cp $OUTPUT_PATH.$FILE_TYPE $CI_PROJECT_NAME-$CI_COMMIT_REF_NAME.$FILE_TYPE
-#   artifacts:
-#     name: "$CI_PROJECT_NAME-$PLATFORM-$CI_COMMIT_REF_NAME"
-#     paths:
-#     - $CI_PROJECT_NAME-$CI_COMMIT_REF_NAME.$FILE_TYPE
-#     expire_in: 7 days
-#   when: manual
-
-# deploy:android:prod:
-#   variables:
-#     PLATFORM: android
-#     FILE_TYPE: apk
-#     OUTPUT_PATH: android/app/build/outputs/apk/app-release
-#   <<: *job_deploy
-#   script:
-#     - cd android && ./gradlew assembleRelease -PMYAPP_RELEASE_STORE_PASSWORD=$KEYSTORE_PASSWORD -PMYAPP_RELEASE_KEY_PASSWORD=$KEYSTORE_PASSWORD
-  
-# deploy:ios:prod:
-#   variables:
-#     PLATFORM: ios
-#     FILE_TYPE: ipa
-#     OUTPUT_PATH: ./$CI_PROJECT_NAME
-#   <<: *job_deploy
-#   script:
-#     - export PACKAGE_NAME=$(node -p -e "require('./package.json').name")
-#     - cd ios
-#     - xcodebuild -scheme $PACKAGE_NAME archive -archivePath $PACKAGE_NAME.xcarchive -allowProvisioningUpdates
-#     - xcodebuild -exportArchive -archivePath ./$PACKAGE_NAME.xcarchive -exportPath . -exportOptionsPlist $PACKAGE_NAME/Info.plist
-#     - mv $PACKAGE_NAME.ipa ../$PACKAGE_NAME.ipa
