--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,8 +48,11 @@ ios:
   image: node:8  
   script:
     - echo "running ios"
-    - yarn install
-    - yarn run test
+    - cd ios
+    - bundle install
+    - mkdir -p test-results/fastlane
+    - bundle exec fastlane test
+    - mv fastlane/report.xml test-results/fastlane
   tags:
     - ios    
 
