--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ ios:
   script:
     - echo "running ios"
     - cd ios
-    - bundle install
+    - sudo bundle install
     - mkdir -p test-results/fastlane
     - bundle exec fastlane test
     - mv fastlane/report.xml test-results/fastlane
