--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,9 +49,8 @@ ios:
   stage: apps
   image: node:8  
   script:
-    - cd ios
-    - bundle install
-    # - bunlder install --path vendor/bundle
+    - cd ios    
+    - bundler install --path vendor/bundle
     - mkdir -p test-results/fastlane
     - fastlane test
     - mv fastlane/report.xml test-results/fastlane
