--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,8 +50,8 @@ ios:
   image: node:8  
   script:
     - yarn install    
-    - cd node_modules/react-native/scripts && ./ios-install-third-party.sh && cd ../../../
-    - cd node_modules/react-native/third-party/glog-0.3.4/ && ../../scripts/ios-configure-glog.sh && cd ../../../../ios
+    - cd node_modules/react-native/scripts && ./ios-install-third-party.sh
+    - cd third-party/glog-0.3.4/ && ./configure.sh && cd ../../../../ios
     - bundler install --path vendor/bundle
     - mkdir -p test-results/fastlane
     - fastlane test
