--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "jest-expo": "32.0.1",
     "jest-junit": "6.4.0",
