--- a/.babelrc
+++ b/.babelrc
@@ -2,11 +2,13 @@
   "presets": [
     "babel-preset-react-native-stage-0/decorator-support"
   ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties"
+  ],
   "env": {
     "development": {
       "plugins": [
-        "transform-react-jsx-source",
-        "@babel/plugin-proposal-class-properties"
+        "transform-react-jsx-source"        
       ]
     }
   }
