--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "jest-expo": "32.0.1",
     "jest-junit": "6.4.0",
@@ -31,7 +33,7 @@
       "@babel/preset-react"
     ],
     "plugins": [
-        "@babel/plugin-proposal-class-properties"
+      "@babel/plugin-proposal-class-properties"
     ]
-}
+  }
 }
